--- a/doc_bitcoin/202108/20210828/_.md
+++ b/doc_bitcoin/202108/20210828/_.md
@@ -14,3 +14,11 @@
 <div style="color:red">수익 5.4</div>
 <div style="color:red">총 수익 11.5</div>
 
+# btc 롱 매도
+![](2021-08-29-01-23-42.png)
+
+# 바이낸스 가격 정책에 
+마진 20X를 하게 되었을 때 수수료는 PNL에 나오는 가격이 아니라  
+실현 금액 - 수수료를 제외 해야 한다.  
+몇 %인지 계산은 ㅇ나했지만 1~2%먹고 손절치면 손해가 나는거 같다.  
+이걸 알고 굉장히 오랫동안 물려 있었다.
